--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,27 +6,23 @@ external:
       key: "c%2BDZPcmLZOJJpGUtDSHeql60J4SrUEzdFpWkSw84BSCOegasdCl6g3%2BMmZNBi5PTMsYsUI%2BuGGs9zhu5lSVeTA%3D%3D"
 
 spring:
+
   datasource:
-    url: jdbc:h2:~/test
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://141.164.44.206:5432/coshdb
+    username: cosh
+    password: 1234
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update # 개발시에는 update, 실제 운영시에는 none을 추천
+      ddl-auto: none # 개발시에는 update, 실제 운영시에는 none을 추천
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     open-in-view: false
-    database-platform: org.hibernate.dialect.H2Dialect
+    database: postgresql
     generate-ddl: true
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
   security:
     user:
