postgreSQL url 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ external:
 spring:
 
   datasource:
-    url: jdbc:postgresql://141.164.44.206:5432/coshdb
+    url: jdbc:postgresql://localhost:5432/coshdb
     username: cosh
     password: 1234
     driver-class-name: org.postgresql.Driver
