--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,40 +1,3 @@
-server:
-  port: 8080
-
-external:
-    api:
-      key: "c%2BDZPcmLZOJJpGUtDSHeql60J4SrUEzdFpWkSw84BSCOegasdCl6g3%2BMmZNBi5PTMsYsUI%2BuGGs9zhu5lSVeTA%3D%3D"
-
 spring:
-
-  datasource:
-    url: jdbc:postgresql://141.164.44.206:5432/coshdb
-    username: cosh
-    password: 1234
-    driver-class-name: org.postgresql.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update # 개발시에는 update, 실제 운영시에는 none을 추천
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    open-in-view: false
-    database: postgresql
-    generate-ddl: true
-
-  security:
-    user:
-      name: user
-      password: 1234
-
-  redis:
-    host: localhost
-    port: 6379
-
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
+  profiles:
+    active: dev
